crates/unblock-model/tests/snapshots/schema_snapshots__diagnostic_report.snap
---
source: crates/unblock-model/tests/schema_snapshots.rs
expression: json
---
{
  "$schema": "https://json-schema.org/draft/2020-12/schema",
  "title": "DiagnosticReport",
  "description": "A diagnostic report — a kind plus a list of findings (CF-B).",
  "type": "object",
  "properties": {
    "findings": {
      "description": "The findings.",
      "type": "array",
      "items": {
        "$ref": "#/$defs/DiagnosticFinding"
      }
    },
    "kind": {
      "description": "The kind of diagnostic.",
      "$ref": "#/$defs/DiagnosticKind"
    }
  },
  "required": [
    "kind",
    "findings"
  ],
  "$defs": {
    "DiagnosticFinding": {
      "description": "A single generic key/value diagnostic finding row (CF-B).",
      "type": "object",
      "properties": {
        "detail": {
          "description": "The finding detail.",
          "type": "string"
        },
        "label": {
          "description": "The finding label.",
          "type": "string"
        }
      },
      "required": [
        "label",
        "detail"
      ]
    },
    "DiagnosticKind": {
      "description": "The kind of a diagnostic probe (CF-B; mirrors the spine §5.2 `DiagnosticsInput` kinds).",
      "oneOf": [
        {
          "description": "Aggregate statistics.",
          "type": "string",
          "const": "stats"
        },
        {
          "description": "General workspace info.",
          "type": "string",
          "const": "info"
        },
        {
          "description": "Where the workspace lives.",
          "type": "string",
          "const": "where"
        },
        {
          "description": "Version information.",
          "type": "string",
          "const": "version"
        },
        {
          "description": "Lint findings.",
          "type": "string",
          "const": "lint"
        },
        {
          "description": "The changelog of closed issues.",
          "type": "string",
          "const": "changelog"
        },
        {
          "description": "Orphan candidates (FR-15).",
          "type": "string",
          "const": "orphans"
        },
        {
          "description": "The dependency edges whose target denotes nothing (D45).",
          "type": "string",
          "const": "dangling"
        }
      ]
    }
  }
}
